--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/gestao-estagio-database
+    url: jdbc:mysql://localhost:3306/gestao-estagio-db
     username: root
     password: stratus1011
     driver-class-name: com.mysql.cj.jdbc.Driver
