--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     username: root
     password: stratus1011
     driver-class-name: com.mysql.cj.jdbc.Driver
+    initialization-mode: always
+    schema: classpath:domain-tables-db.sql
+    data: classpath:data-db.sql
   jpa:
     hibernate:
       ddl-auto: create
