--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
