--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,30 +5,28 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/gestao-estagio-db
     username: root
-    password: stratus1011
+    password: 1645
     driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
     schema: classpath:domain-tables-db.sql
     data: classpath:data-db.sql
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       generate-ddl: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
     show-sql: true
-
-    spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: gutm86@gmail.com
+    password: ${GESTAO_ESTAGIO_SECRET}
+    properties:
       mail:
-        host: smtp.fatec.sp.gov.br
-        port: 587
-        username: gutm86@gmail.com
-        password: 1645173red436gtc
-        properties:
-          mail:
-            smtp:
-              auth: true
-              starttls:
-                enable: true
+        smtp:
+          auth: true
+          starttls:
+            enable: true
