--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/gestao-estagio-db
+    url: jdbc:mysql://localhost:3306/gestao_estagio_db
     username: root
     password: 1645
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -22,7 +22,7 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: gutm86@gmail.com
+    username: thamires.agnes12@gmail.com
     password: ${GESTAO_ESTAGIO_SECRET}
     properties:
       mail:
